[package]
edition = "2021"
name = "rust_fib"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.1.1"
tokio = { version = "1.42.0", features = ["full"] }
rayon = "1.10.0"
kanal = "0.1.0-pre8"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "fib_benchmark"
harness = false
